spacing fix in index

--- a/client/css/common.css
+++ b/client/css/common.css
@@ -1,19 +1,3 @@
-.module{ 
-  padding: 20px;
-  margin: 10px auto;
-  border: 1px solid;
-  width: 300px;
-  display: none;
-  overflow: hidden;
-  position: relative;
-}
-.module h2 {
-  font-size: 24px;
-  text-align: center;
-  margin: 5px auto;
-}
-
-
 .error,
 .success {
   display: block;
@@ -32,62 +16,4 @@ img.loading {
   display: block;
   margin: 0 auto;
 }
-.showlink {
-  position: absolute;
-  text-align: right;
-  font-size: 12px;
-  bottom: 5px;
-  right: 5px;
-  cursor: pointer;
-  color: blue;
-  display: none;
-}
-.showlink:focus, .showlink:hover {
-  text-decoration: underline;
-}
 
-#auth form {
-  text-align: center;
-  margin: 0 auto;
-}
-#matchmaker button {
-  display: block;
-  font-size: 24px;
-  padding: 10px;
-  margin: 0 auto;
-  width: 180px;
-}
-
-#matchmaker h3 {
-  text-align: center;
-  margin: 10px auto;
-  font-size: 30px;
-  display: none;
-}
-
-
-#gamestate li {
-  padding: 2px;
-  margin: 1px;
-}
-
-#gamestate table {
-  border: 0;
-  background: url(/images/gameboard.png);
-}
-#gamestate tr {
-  height: 100px;
-}
-#gamestate td {
-  width: 100px;
-  text-align: center;
-  font-size: 100px;
-  line-height: 100px;
-}
-
-#matchmaker h3 {
-  text-align: center;
-  margin: 10px auto;
-  font-size: 30px;
-  display: none;
-}
